# CliipMe

./: .gitignore  CMakeLists.txt
src/: main.cpp
